[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/BasicChat.gd" type="Script" id=1]

[node name="BasicChat" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 550.0

[node name="chat_mesgs" type="TextEdit" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 800.0
margin_bottom = 550.0
rect_min_size = Vector2( 800, 550 )
readonly = true

[node name="user_list" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 804.0
margin_right = 847.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 550 )
text = "USERS:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 554.0
margin_right = 1010.0
margin_bottom = 574.0

[node name="mesg" type="TextEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 950.0
margin_bottom = 20.0
rect_min_size = Vector2( 950, 0 )

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 954.0
margin_right = 1000.0
margin_bottom = 20.0
text = "SEND"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
